UUPS migrations ready and deployed successfuly

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/mjtbkh/uups-upgradeable-contract#readme",
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "^4.4.2",
-    "@openzeppelin/truffle-upgrades": "^1.12.0"
+    "@openzeppelin/truffle-upgrades": "^1.12.0",
+    "node": "^17.3.1"
   }
 }
